--- a/DibujandoConCanvas/canvas.html
+++ b/DibujandoConCanvas/canvas.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Dibujo en Canvas</h1>
+    <p>
+      ¿Cuantas lineas quieres?
+      <input type="text" name="" value="" id="texto_lineas" />
+      <input type="button" name="" value="¡A darle!" id="botoncito"/>
+    </p>
     <canvas id="dibujito" width="300" height="300"></canvas>
     <p>Así queda tu dibujo</p>
     <script type="text/javascript" src="dibujito.js">
