Se agrega el proyecto "Fizz-Buzz" y se modifico el orden de carpetas de otros proyectos

--- a/DibujandoConCanvas/teclas/flechas.html
+++ b/DibujandoConCanvas/teclas/flechas.html
@@ -5,6 +5,7 @@
     <title>Dibujando con flechas</title>
   </head>
   <body>
+    <h1>Dibujando en Canvas con las Flechas del Teclado</h1>
     <canvas id="area_de_dibujo" width="300" height="300"></canvas>
     <script type="text/javascript" src="eventos.js"></script>
     <p>Mueve las flechas del teclado para dibujar</p>
