--- a/DibujandoConCanvas/JuegoVilla/villa.html
+++ b/DibujandoConCanvas/JuegoVilla/villa.html
@@ -7,6 +7,7 @@
     <title>Juego Villa</title>
 </head>
 <body>
+    <h1>La Villa</h1>
     <canvas  width="500" height="500" id="villaplatzi"></canvas>
     <script src="codigo.js"></script>
 </body>
